mobile responsive + firebase setup and hosted

--- a/src/app/board-component/board.component.html
+++ b/src/app/board-component/board.component.html
@@ -1,10 +1,10 @@
-<h1>Current Player: {{ player }}</h1>
+<h1 class="current-player">Current Player: {{ player }}</h1>
 
 <button nbButton outline status="danger" (click)="newGame()">
   Start new Game
 </button>
 
-<h2 *ngIf="winner">Player {{ winner }} won the game!</h2>
+<h2 class="winning-player" *ngIf="winner">Player {{ winner }} won the game!</h2>
 
 <main>
   <app-square
